--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/DeRomuald/employee-tracker/issues"
   },
-  "homepage": "https://github.com/DeRomuald/employee-tracker#readme"
+  "homepage": "https://github.com/DeRomuald/employee-tracker#readme",
+  "dependencies": {
+    "console.table": "^0.10.0",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.1",
+    "inquirer": "^8.2.4",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "sqlite3": "^5.0.11"
+  }
 }
